--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,12 @@
+/* FIXME ---- finish content
+
 .header, .introduction, .footer {
     background-color: #1F2937;
+}
+
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
 }
 
 .quote {
