--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,18 @@ body {
     flex-direction: column;
 }
 
+.header, .introduction, .information, .quote, .call-to-action, .footer {
+    padding: 0 150px;
+}
+
 .header, .introduction, .footer {
     background-color: #1F2937;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .logo {
@@ -16,6 +26,8 @@ body {
 
 ul {
     list-style: none;
+    display: flex;
+    gap: 20px;
 }
 
 a {
@@ -23,14 +35,30 @@ a {
     color: #E5E7EB;
 }
 
+.introduction {
+    display: flex;
+}
+
+.introduction-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
 
 .introduction-subtext {
     font-size: 18px;
     color: #E5E7EB;
 }
 
+.introduction-picture {
+    width: 550px;
+}
+
 .body {
     flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .introduction, .information, .quote, .call-to-action {
@@ -41,6 +69,13 @@ a {
     font-size: 48px;
     font-weight: 800;
     color: #F9FAF8;
+}
+
+button {
+    border-radius: 12px;
+    border-style: none;
+    padding: 10px;
+    width: 100px;
 }
 
 button, .call-to-action {
