--- a/styles.css
+++ b/styles.css
@@ -83,10 +83,47 @@ button, .call-to-action {
     color: white;
 }
 
+.information {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
 .information-title {
     font-size: 36px;
     font-weight: 800;
     color: #1F2937;
+    padding: 20px;
+}
+
+.information-card-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.card-image {
+    width: 250px;
+    height: 250px;
+    border: 4px solid;
+    border-color: #3882F6;
+    border-radius: 12px;
+    margin-bottom: 10px;
+}
+
+.card-text {
+    text-align: center;
+    width: 250px;
+    height: 250px;
+    margin-top: 10px;
 }
 
 .quote {
