--- a/styles.css
+++ b/styles.css
@@ -128,10 +128,20 @@ button, .call-to-action {
 
 .quote {
     background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .quote-text {
     font-size: 36px;
     font-weight: 300;
     color: #1F2937;
+}
+
+.quote-attribution {
+    align-self: flex-end;
+    font-size: 25px;
+    font-weight: 800;
 }
