--- a/styles.css
+++ b/styles.css
@@ -179,3 +179,11 @@ button, .call-to-action {
     border: 2.5px solid;
     border-radius: 12px;
 }
+
+.footer {
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #F9FAF8;
+}
